--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@
 .navbar {
   overflow: hidden;
   background-color: transparent;
+  margin-top: 2em;
 }
 
 .dropdown {
@@ -48,7 +49,8 @@
   padding: 14px 16px;
   padding-right: 2em;
   font-family: inherit;
-  margin: 0;
+  margin-right: 2em;
+  margin-left: 2em;
 }
 
 .navbar a:hover, .navbar i:hover {
@@ -67,8 +69,10 @@
   text-decoration: none;
   display: block;
   text-align: center;
+  padding-top: 1em;
   padding-right: 2em;
   padding-left: 2em;
+  margin-right: 0;
 }
 
 .fa-moon {
@@ -96,7 +100,7 @@ nav a.lines::before, nav a.lines::after {
   width: 100%;
   content: "";
   background: #fff;
-  transition: all 0.15s;
+  transition: all 0.3s;
 }
 
 nav a.lines::before {
