--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,8 @@
 }
 
 .navbar a:hover, .navbar i:hover {
-  color: #fff;
+  text-shadow: 0 0 10px #9D4EDD, 0 0 20px #9D4EDD, 0 0 30px #9D4EDD !important;
+  cursor: pointer;
 }
 
 .dropdown-content {
@@ -75,12 +76,9 @@
   margin-right: 0;
 }
 
-.fa-moon {
-  padding: 0.5em;
-}
-
 .inline {
   display: flex !important;
+  visibility: hidden;
 }
 
 .rot {
@@ -140,7 +138,7 @@ nav a {
 }
 
 body {
-  background: #240046;
+  background: radial-gradient(#3C096C, #10002b);
   overflow: hidden;
 }
 
