New index page, switched to css main2

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,8 +165,8 @@ nav {
 
 body{
     background:  radial-gradient($bg-dark2, $bg-dark0);
-    // min-height: 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    // overflow: hidden;
 }
 
 main{
