Updated fractcal js, still needs work.

--- a/css/main2.css
+++ b/css/main2.css
@@ -163,7 +163,7 @@ a {
     width: 80%;
     left: 10%;
     position: absolute;
-    background-color: #000000a4;
+    background-color: #000000d3;
     max-height: 0;
     overflow: hidden;
   }
@@ -232,7 +232,10 @@ textarea,
   }
 
   .footer {
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
+  }
+  .footer h4 {
+    margin-bottom: 2em;
   }
 
   button {
@@ -252,7 +255,7 @@ textarea,
 .newsletter-grid,
 .footer-grid,
 .main-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr !important;
   }
 
   .footer-grid {
@@ -264,8 +267,8 @@ textarea,
   }
 }
 @media (max-width: 480px) {
-  .heroitems h1 {
-    font-size: 30px;
+  .heroitems h2 {
+    font-size: 25px;
   }
 
   .heroitems p {
@@ -316,9 +319,10 @@ button {
 
 .feature {
   text-align: center;
+  margin-bottom: 80px;
 }
 
-.feature-image img {
+.feature-image.feature-item {
   width: 300px;
   height: auto;
   margin: 1em;
@@ -326,7 +330,8 @@ button {
 
 .feature-image {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3em;
 }
 
 .newsletter {
@@ -364,11 +369,14 @@ h3 {
 .footer {
   text-align: center;
   margin-bottom: 4em;
-  flex: 1;
+}
+.footer h4 {
+  margin-bottom: 2em;
 }
 
 .footer-grid {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .main-footer {
@@ -454,5 +462,13 @@ nav li.lines:hover::after, nav li.lines:hover::before {
 }
 
 #fCanvas {
-  margin-top: 14em;
+  height: 100vh;
+}
+
+.grow-button {
+  position: absolute;
+  top: 90%;
+  left: 48%;
+  width: 80px;
+  z-index: 10;
 }
