--- a/scss/main2.scss
+++ b/scss/main2.scss
@@ -30,15 +30,11 @@ body {
 }
 
 h2.glow{
-    // position: relative;
-    // width: 100%;
-    
     font-family: Arial, Helvetica, sans-serif;
     font-size: 5rem;
     font-weight: bold;
     color: $text-light;
     text-transform: uppercase;
-    // text-align: center;
     letter-spacing: 10px;
     line-height: 0.7em;
     outline: none;
@@ -138,6 +134,7 @@ a {
     text-align: center;
     p{
         margin-bottom: 2rem;
+        text-align: center;
     }
 }
 
@@ -267,6 +264,17 @@ a {
     #screen-button{
         width: 10%;
     }
+
+    //carousel
+    .course-carousel{
+        width: 100% !important;
+    }
+    .course-item{
+        padding: none;
+        font-size: 15px;
+
+    }
+
 }
 
 @media (max-width: 600px) {
@@ -505,4 +513,23 @@ nav li.lines:hover::after, nav li.lines:hover::before{
     left: 48%;
     width: 80px;
     z-index: 10;
+}
+
+.course-grid{
+    width: 100%;
+    height: 75.5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    }
+
+.course-carousel{
+    width: 50%;
+}
+
+.course-item{
+    text-align: center;
+    padding: 5em 5em;
 }
