--- a/css/main2.css
+++ b/css/main2.css
@@ -5,41 +5,38 @@
   box-sizing: border-box;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.logo {
+  line-height: 27px;
+  letter-spacing: 0.2em;
+  text-align: left;
+  color: #eee;
+  font-size: 20px;
+  width: 240px;
+}
+
 body {
-  background-color: #fff;
   margin: 0px;
   padding: 0px;
   font: 20px/1.5 "Nunito", sans-serif;
 }
 
-h2.glow {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 5rem;
-  font-weight: bold;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 10px;
-  line-height: 0.7em;
-  outline: none;
-  margin-bottom: 1.5em;
-  -webkit-box-reflect: below 1px linear-gradient(transparent, #240046);
-  text-shadow: 0 0 10px #7B2CBF, 0 0 20px #7B2CBF, 0 0 40px #7B2CBF, 0 0 80px #7B2CBF, 0 0 160px #7B2CBF, 0 0 320px #7B2CBF;
-}
-
 header {
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  position: fixed;
   width: 100%;
-  z-index: 5;
   text-align: center;
-  padding: 2em 4em;
+  padding: 0.5em 1.5em;
+  background-color: rgba(7, 6, 6, 0.658);
+  z-index: 3;
 }
 
 .header-grid {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 header nav {
@@ -48,12 +45,12 @@ header nav {
 }
 
 nav a {
-  color: #fff;
+  color: #eee;
   text-decoration: none;
   text-transform: uppercase;
   width: 100%;
   letter-spacing: 0.2em;
-  padding: 1rem 2rem;
+  padding: 0 0.5em;
 }
 
 li {
@@ -64,23 +61,23 @@ nav ul {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-content: space-between;
+  grid-template-columns: repeat(6, 1fr);
   text-align: center;
   transition: 0.3s;
 }
 nav li {
   list-style: none;
-  padding: 1em 0;
+  padding: 0.2em 0;
+  font-size: 15px;
 }
 nav a {
   opacity: 1;
   transition: all 0.3s ease;
+  padding: 0 1em;
 }
 nav a:hover {
   opacity: 0.6;
-  color: #fff;
-  text-shadow: 0 0 10px #7B2CBF, 0 0 20px #7B2CBF, 0 0 40px #7B2CBF, 0 0 80px #7B2CBF, 0 0 160px #7B2CBF, 0 0 320px #7B2CBF;
+  color: #c6ac8f;
 }
 
 a {
@@ -89,9 +86,8 @@ a {
 }
 
 .heroimage {
-  background: radial-gradient(#3C096C, #10002b);
   background-size: cover;
-  height: 100vh;
+  height: 90vh;
 }
 
 .heroimage2 {
@@ -110,16 +106,28 @@ a {
   grid-gap: 4em;
 }
 
-.sideleft {
-  text-align: center;
+.sideleft1 {
+  margin-top: 9em;
+  text-align: left;
 }
-.sideleft p {
+.sideleft1 p {
   margin-bottom: 2rem;
-  text-align: center;
+  text-align: left;
 }
 
-.sideright img {
-  border-radius: 10px;
+.sideleft2 img {
+  margin-left: 6em;
+}
+
+.sideright1 {
+  text-align: center;
+}
+.sideright1 img {
+  width: 300px;
+}
+
+.sideright2 {
+  text-align: center;
 }
 
 .sub-heading {
@@ -130,8 +138,9 @@ a {
 }
 
 .heading {
-  font-size: 50px;
+  font-size: 40px;
   margin-bottom: 30px;
+  text-transform: uppercase;
 }
 
 #toggle {
@@ -139,12 +148,12 @@ a {
 }
 
 .label {
-  font-size: 26px;
+  font-size: 20px;
   line-height: 70px;
   display: none;
   width: 30px;
   float: right;
-  color: #fff;
+  color: #eee;
 }
 
 @media (max-width: 992px) {
@@ -156,8 +165,8 @@ a {
     grid-template-columns: 1fr 1fr !important;
   }
 
-  h2.glow {
-    font-size: 3rem;
+  .heroitems img {
+    width: 400px;
   }
 
   .label {
@@ -188,7 +197,6 @@ a {
   }
 
   header div .logo {
-    float: left;
     padding: 1em 0.5em 0.5em 0.5em;
   }
 
@@ -205,8 +213,10 @@ a {
     font-size: 40px;
   }
 
-  .sideleft,
-.sideright,
+  .sideleft1,
+.sideleft2,
+.sideleft2,
+.sideright1,
 .newsletter h1,
 .newsletter form,
 .footer,
@@ -226,15 +236,16 @@ textarea,
     max-width: 100%;
   }
 
-  .sideleft {
+  .sideleft2 {
     padding-bottom: 1em;
   }
-  .sideleft img {
-    width: 80%;
+  .sideleft2 img {
+    margin-top: 3em;
+    width: 200px;
   }
 
   .main-padding {
-    padding: 2em 0;
+    padding: 1em 0;
   }
 
   .heroitems p {
@@ -265,10 +276,24 @@ textarea,
     padding: none;
     font-size: 15px;
   }
+
+  .project-grid {
+    grid-template-columns: 1fr !important;
+  }
+
+  .ascii-link {
+    visibility: hidden !important;
+  }
 }
 @media (max-width: 600px) {
-  h2.glow {
-    font-size: 2rem;
+  .heroitems img {
+    width: 300px;
+  }
+
+  header .logo {
+    font-size: 14px;
+    margin: 0;
+    height: 50px;
   }
 
   .rooms,
@@ -284,6 +309,21 @@ textarea,
 
   #screen-button {
     width: 10%;
+  }
+
+  .sideright1 {
+    visibility: hidden !important;
+    height: 1px;
+  }
+
+  .sideleft2 {
+    visibility: hidden !important;
+    height: 1px;
+  }
+
+  .course-grid {
+    grid-template-columns: 1fr !important;
+    text-align: center;
   }
 }
 @media (max-width: 480px) {
@@ -305,8 +345,7 @@ textarea,
   }
 }
 main {
-  background-color: #000000ee;
-  color: #fff;
+  color: #eee;
 }
 
 button {
@@ -314,34 +353,33 @@ button {
 }
 
 .button {
-  background-color: #3C096C;
+  background-color: #22333b;
   transition: 0.3s all ease;
   padding: 12px 30px;
   margin-top: 1em;
   text-transform: uppercase;
   letter-spacing: 0.15em;
-  color: #fff;
-  border: 1px solid #10002b;
+  color: #eee;
   cursor: pointer;
   text-decoration: none;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.6);
   border-radius: 5px;
 }
 
 .button:hover {
-  color: #10002b;
-  background-color: #fff;
-}
-
-.bg-light {
-  background-color: #000000ee !important;
-  color: #fff !important;
-  transition: all 0.6s;
+  color: #201e22;
+  background-color: #c6ac8f;
 }
 
 .bg-dark {
-  background-color: #fff !important;
-  color: #000000ee !important;
+  background-color: #201e22 !important;
+  color: #eee !important;
+  transition: all 0.6s;
+}
+
+.bg-light {
+  background-color: #eee;
+  color: #201e22;
   transition: all 0.6s;
 }
 
@@ -364,7 +402,7 @@ button {
 
 .newsletter {
   padding: 0.5em;
-  color: #fff;
+  color: #eee;
   background: linear-gradient(to right, #7B2CBF, #5A189A, #3C096C, #240046, #10002b);
   overflow: hidden;
 }
@@ -375,7 +413,7 @@ button {
   grid-gap: 3rem;
 }
 
-video {
+video#beat-saber {
   margin-top: 10%;
   width: 75%;
   box-shadow: 0 0 10px #5A189A, 0 0 20px #5A189A, 0 0 40px #5A189A, 0 0 80px #5A189A;
@@ -384,7 +422,7 @@ video {
 h3 {
   position: relative;
   width: 100%;
-  color: #fff;
+  color: #eee;
   font-size: 1rem;
   text-transform: uppercase;
   text-align: center;
@@ -404,12 +442,11 @@ h3 {
 
 .footer-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .main-footer {
   padding: 4em 0em 0.9em 0em;
-  background-color: #000000ee;
 }
 
 .copyright {
@@ -435,7 +472,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   margin: auto;
-  z-index: 2;
+  z-index: 1;
 }
 .heroitems h1 {
   font-size: 3em;
@@ -451,8 +488,8 @@ nav li.lines::before, nav li.lines::after {
   height: 2px;
   width: 100%;
   content: "";
-  background: #fff;
-  transition: all 0.1s;
+  background: #eee;
+  transition: all 0.2s;
 }
 
 nav li.lines::before {
@@ -477,16 +514,12 @@ nav li.lines:hover::after, nav li.lines:hover::before {
 }
 
 #screen-button {
-  position: absolute;
-  margin-left: 25px;
-  margin-top: 25px;
-  color: #fff;
+  color: #eee;
   border: none;
   background-color: transparent;
 }
 
 .color-light {
-  color: #000000ee !important;
   transition: all 0.8s;
 }
 
@@ -503,19 +536,38 @@ nav li.lines:hover::after, nav li.lines:hover::before {
 }
 
 .course-grid {
-  width: 100%;
-  height: 75.5vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
 .course-carousel {
-  width: 50%;
+  width: 100%;
 }
 
 .course-item {
   text-align: center;
   padding: 5em 5em;
+}
+
+.project-grid {
+  margin-top: 9em;
+  margin-bottom: 10em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  text-align: center;
+}
+
+.ascii-link {
+  font-size: 10px;
+  line-height: 11px;
+}
+.ascii-link a {
+  color: #5e503f;
+  text-decoration: none;
+}
+
+.fractal-link h2 {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
