--- a/scss/main2.scss
+++ b/scss/main2.scss
@@ -10,8 +10,15 @@ $bg-dark2: #3C096C;
 $bg-dark3: #5A189A;
 $bg-dark4: #7B2CBF;
 $bg-dark5:#9D4EDD;
-$text-light: #fff;
-$text-dark: #000000ee;
+$white: #eee;
+
+$color1: #5e503f;
+$color2: #c6ac8f;
+$color3: #eae0d5;
+$text-light: #eee;
+$color4: #22333b;
+$text-dark: #201e22;
+
 $bg-light1: #FF6D00;
 $bg-light2: #FF7900;
 $bg-light3: #FF8500;
@@ -22,41 +29,54 @@ $bg-light5: #FF9E00;
     box-sizing: border-box;
 }
 
+.absolute{
+    position: absolute;
+}
+
+.logo{
+    line-height: 27px;
+    letter-spacing: 0.2em;
+    text-align: left;
+    color: $text-light;
+    font-size: 20px;
+    width: 240px;
+}
+
 body {
-    background-color: $text-light;
+    // background-color: $text-light;
     margin: 0px;
     padding: 0px;
     font: 20px/1.5 "Nunito", sans-serif;
 }
 
-h2.glow{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 5rem;
-    font-weight: bold;
-    color: $text-light;
-    text-transform: uppercase;
-    letter-spacing: 10px;
-    line-height: 0.7em;
-    outline: none;
-    margin-bottom: 1.5em;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, $bg-dark1);
-    text-shadow: 0 0 10px $bg-dark4, 0 0 20px $bg-dark4, 0 0 40px $bg-dark4, 0 0 80px $bg-dark4, 0 0 160px $bg-dark4, 0 0 320px $bg-dark4;
-}
+
+// h2.glow{
+//     font-family: Arial, Helvetica, sans-serif;
+//     font-size: 5rem;
+//     font-weight: bold;
+//     color: $text-light;
+//     text-transform: uppercase;
+//     letter-spacing: 10px;
+//     line-height: 0.7em;
+//     outline: none;
+//     margin-bottom: 1.5em;
+//     -webkit-box-reflect: below 1px linear-gradient(transparent, $bg-dark1);
+//     text-shadow: 0 0 10px $bg-dark4, 0 0 20px $bg-dark4, 0 0 40px $bg-dark4, 0 0 80px $bg-dark4, 0 0 160px $bg-dark4, 0 0 320px $bg-dark4;
+// }
 
 header {
-    position: absolute;
-    top: 0px;
-    left: 0px;
+    position: fixed;
     width: 100%;
-    z-index: 5;
     text-align: center;
-    padding: 2em 4em;
+    padding: 0.5em 1.5em;
+    background-color: rgba(7, 6, 6, 0.658);
+    z-index: 3;
 }
 
 .header-grid {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 
 header nav {
@@ -70,7 +90,7 @@ nav a {
     text-transform: uppercase;
     width: 100%;
     letter-spacing: 0.2em;
-    padding: 1rem 2rem;
+    padding: 0 0.5em;
 }
 
 li{
@@ -82,23 +102,24 @@ nav {
         margin: 0;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        justify-content: space-between;
+        grid-template-columns: repeat(6, 1fr);
+        // justify-content: space-between;
         text-align: center;
         transition: 0.3s;
     }
     li {
         list-style: none;
-        padding: 1em 0;
+        padding: 0.2em 0;
+        font-size: 15px;
     }
     a {
         opacity: 1;
         transition: all 0.3s ease;
+        padding: 0 1em;
     }
     a:hover {
         opacity: 0.6;
-        color: $text-light;
-        text-shadow: 0 0 10px $bg-dark4, 0 0 20px $bg-dark4, 0 0 40px $bg-dark4, 0 0 80px $bg-dark4, 0 0 160px $bg-dark4, 0 0 320px $bg-dark4;
+        color: $color2;
     }
 }
 
@@ -108,10 +129,9 @@ a {
 }
 
 .heroimage {
-    background: radial-gradient($bg-dark2, $bg-dark0);
+    // background-color: $text-light;
     background-size: cover;
-    height: 100vh;
-    // margin-bottom: 25px;
+    height: 90vh;
 }
 
 .heroimage2{
@@ -130,18 +150,28 @@ a {
     grid-gap: 4em;
 }
 
-.sideleft {
-    text-align: center;
+.sideleft1{
+    margin-top: 9em;
+    text-align: left;
     p{
         margin-bottom: 2rem;
-        text-align: center;
+        text-align: left;
+    }
+}
+.sideleft2{
+    img{
+        margin-left: 6em;
     }
 }
 
-.sideright {
+.sideright1 {
+    text-align: center;
     img{
-        border-radius: 10px;
+        width: 300px;
     }
+}
+.sideright2{
+    text-align: center;
 }
 
 .sub-heading {
@@ -152,8 +182,9 @@ a {
 }
 
 .heading {
-    font-size: 50px;
+    font-size: 40px;
     margin-bottom: 30px;
+    text-transform: uppercase;
 }
 
 #toggle {
@@ -161,7 +192,7 @@ a {
 }
 
 .label {
-    font-size: 26px;
+    font-size: 20px;
     line-height: 70px;
     display: none;
     width: 30px;
@@ -179,8 +210,8 @@ a {
         grid-template-columns: 1fr 1fr !important;
     }
 
-    h2.glow{
-        font-size: 3rem;
+    .heroitems img{
+        width: 400px;
     }
 
     .label {
@@ -207,7 +238,7 @@ a {
         max-height: 600px;
     }
     header div .logo {
-        float: left;
+        // float: left;
         padding: 1em 0.5em 0.5em 0.5em;
     }
     .menu a {
@@ -220,8 +251,10 @@ a {
     .heroitems h1 {
         font-size: 40px;
     }
-    .sideleft,
-    .sideright,
+    .sideleft1,
+    .sideleft2,
+    .sideleft2,
+    .sideright1,
     .newsletter h1,
     .newsletter form,
     .footer,
@@ -239,14 +272,15 @@ a {
     .rooms-pic-1 {
         max-width: 100%;
     }
-    .sideleft {
+    .sideleft2 {
         padding-bottom: 1em;
         img {
-            width: 80%;
+            margin-top: 3em;
+            width: 200px;
         }
     }
     .main-padding {
-        padding: 2em 0;
+        padding: 1em 0;
     }
     .heroitems p {
         font-size: 25px;
@@ -274,13 +308,26 @@ a {
         font-size: 15px;
 
     }
+    .project-grid{
+        grid-template-columns: 1fr !important;
+    }
+    
+    .ascii-link{
+        visibility: hidden !important;
+    }
 
 }
 
 @media (max-width: 600px) {
 
-    h2.glow{
-        font-size: 2rem;
+    .heroitems img{
+        width: 300px;
+    }
+
+    header .logo{
+        font-size: 14px;
+        margin: 0;
+        height: 50px;
     }
 
     .rooms,
@@ -294,6 +341,19 @@ a {
     }
     #screen-button{
         width: 10%;
+    }
+
+    .sideright1{
+        visibility: hidden !important;
+        height: 1px;
+    }
+    .sideleft2{
+        visibility: hidden !important;
+        height: 1px;
+    }
+    .course-grid{
+        grid-template-columns: 1fr !important;
+        text-align: center;
     }
 }
 
@@ -311,10 +371,10 @@ a {
     .feature-image{
         grid-template-columns: 1fr !important;
     }
+    
 }
 
 main{
-    background-color: $text-dark;
     color: $text-light;
 }
 
@@ -323,33 +383,32 @@ button {
 }
 
 .button {
-    background-color: $bg-dark2;
+    background-color: $color4;
     transition: 0.3s all ease;
     padding: 12px 30px;
     margin-top: 1em;
     text-transform: uppercase;
     letter-spacing: 0.15em;
     color: $text-light;
-    border: 1px solid $bg-dark0;
     cursor: pointer;
     text-decoration: none;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.6);
     border-radius: 5px;
 }
 
 .button:hover {
-    color: $bg-dark0;
-    background-color: $text-light;
+    color: $text-dark;
+    background-color: $color2;
 }
 
-.bg-light{
+.bg-dark{
     background-color: $text-dark !important;
     color: $text-light !important;
     transition: all 0.6s;
 }
-.bg-dark{
-    background-color: $text-light !important;
-    color: $text-dark !important;
+.bg-light{
+    background-color: $text-light ;
+    color: $text-dark ;
     transition: all 0.6s;
 }
 
@@ -382,7 +441,7 @@ button {
     grid-gap: 3rem;
 }
 
-video{
+video#beat-saber{
     margin-top: 10%;
     width: 75%;
     box-shadow: 0 0 10px $bg-dark3, 0 0 20px $bg-dark3, 0 0 40px $bg-dark3, 0 0 80px $bg-dark3;
@@ -414,12 +473,11 @@ h3{
 
 .footer-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 
 .main-footer {
     padding: 4em 0em 0.9em 0em;
-    background-color: $text-dark;
 }
 
 .copyright {
@@ -446,7 +504,7 @@ h3{
     flex-direction: column;
     align-items: center;
     margin: auto;
-    z-index: 2;
+    z-index: 1;
 
     h1 {
         font-size: 3em;
@@ -465,7 +523,7 @@ nav li.lines::before, nav li.lines::after{
     width: 100%;
     content: '';
     background: $text-light;
-    transition: all 0.1s;
+    transition: all 0.2s;
 }
 
 nav li.lines::before{
@@ -491,16 +549,13 @@ nav li.lines:hover::after, nav li.lines:hover::before{
 // 
 
 #screen-button{
-    position: absolute;
-    margin-left: 25px;
-    margin-top: 25px;
     color: $text-light;
     border: none;
     background-color: transparent;
 }
 
 .color-light{
-    color: $text-dark !important;
+    // color: $text-dark !important;
     transition: all 0.8s;
 }
 
@@ -516,20 +571,44 @@ nav li.lines:hover::after, nav li.lines:hover::before{
 }
 
 .course-grid{
-    width: 100%;
-    height: 75.5vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    // align-items: center;
     }
 
 .course-carousel{
-    width: 50%;
+    width: 100%;
+    
 }
 
 .course-item{
     text-align: center;
     padding: 5em 5em;
+}
+
+.project-grid{
+    margin-top: 9em;
+    margin-bottom: 10em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    text-align: center;
+}
+
+.ascii-link{
+    font-size: 10px;
+    line-height: 11px;
+    a{
+        color: $color1;
+        text-decoration: none;
+    }
+}
+
+
+.fractal-link{
+    h2{
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        // color: $color2;
+    }
 }
