--- a/css/main2.css
+++ b/css/main2.css
@@ -1,6 +1,86 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:300,400,700");
 @import url("https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css");
 @import url("https://use.fontawesome.com/releases/v5.13.1/css/all.css");
+.loader.spinner:before {
+  width: 117px;
+  height: 117px;
+  border-color: #201e22;
+  top: 0px;
+  left: 0px;
+  -webkit-animation: rotate 1s linear 0s infinite;
+          animation: rotate 1s linear 0s infinite;
+}
+
+.loader.spinner:after {
+  width: 117px;
+  height: 117px;
+  border-color: #201e22;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  -webkit-animation: rotate 1s linear 0.5s infinite;
+          animation: rotate 1s linear 0.5s infinite;
+}
+
+.loader {
+  margin: auto;
+  top: 30%;
+  position: relative;
+  width: 125px;
+  height: 125px;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-width: 10px;
+  border-style: solid;
+  border-radius: 20%;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(0.7);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(0.7);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+#loadingDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #eee;
+  z-index: 9999;
+}
+
 * {
   box-sizing: border-box;
 }
